[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/menus/station_off.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/latenight_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/menus/results_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/menus/results.png" type="Texture" id=4]
[ext_resource path="res://src/items/menu/start_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/nights/ambience_sound.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 11, 4 )

[sub_resource type="Animation" id=2]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("BlackScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackButton:input_pickable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="ResultsMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 384.0
margin_bottom = 216.0
mouse_filter = 2
color = Color( 0.101961, 0.0470588, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StationOff" type="Sprite" parent="."]
position = Vector2( 24, 120 )
texture = ExtResource( 1 )
centered = false

[node name="Text" type="Label" parent="."]
margin_left = 256.0
margin_top = 56.0
margin_right = 304.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.65098, 0.541176, 0.521569, 1 )
text = "Flyers Sold"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text2" type="Label" parent="."]
margin_left = 256.0
margin_top = 72.0
margin_right = 272.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.65098, 0.541176, 0.521569, 1 )
text = "Gas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlyersSold" type="Label" parent="."]
margin_left = 320.0
margin_top = 56.0
margin_right = 360.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.65098, 0.541176, 0.521569, 1 )
text = "(4) $1200"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gas" type="Label" parent="."]
margin_left = 328.0
margin_top = 72.0
margin_right = 360.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.65098, 0.541176, 0.521569, 1 )
text = "- $450"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="Label" parent="."]
margin_left = 328.0
margin_top = 96.0
margin_right = 360.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.65098, 0.541176, 0.521569, 1 )
text = "$750"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="ColorRect" parent="."]
margin_left = 256.0
margin_top = 87.0
margin_right = 360.0
margin_bottom = 88.0
mouse_filter = 2
color = Color( 0.65098, 0.541176, 0.521569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Results" type="Sprite" parent="."]
position = Vector2( 310, 32 )
texture = ExtResource( 4 )

[node name="BackButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 343, 186 )

[node name="Collision" parent="BackButton" index="1"]
shape = SubResource( 1 )

[node name="Start" parent="BackButton" index="3"]
text = "Back"

[node name="BlackScreen" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 384.0
margin_bottom = 216.0
mouse_filter = 2
color = Color( 0.101961, 0.0470588, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "enter"
anims/enter = SubResource( 2 )

[node name="AmbienceSound" parent="." instance=ExtResource( 6 )]

[editable path="BackButton"]
